using_weight.ipynb

--- a/aneira_resnet34.ipynb
+++ b/aneira_resnet34.ipynb
@@ -25,10 +25,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ukEqz7K7E1tq",
-        "outputId": "7490f8ce-c832-4cab-81d3-8cfcdf6ac277"
+        "outputId": "59200ca8-d27e-4ba8-861a-49104d152d04"
       },
       "source": [
-        "!cd /content/\n",
+        "%cd /content/\n",
         "!rm -rf convnet2\n",
         "# Clonamos el repositorio\n",
         "!git clone https://github.com/alvaro-neira/convnet2.git --branch tarea1"
@@ -40,12 +40,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'convnet2'...\n",
-            "remote: Enumerating objects: 343, done.\u001b[K\n",
-            "remote: Counting objects: 100% (343/343), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (230/230), done.\u001b[K\n",
-            "remote: Total 343 (delta 220), reused 201 (delta 103), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (343/343), 212.78 KiB | 2.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (220/220), done.\n"
+            "remote: Enumerating objects: 363, done.\u001b[K\n",
+            "remote: Counting objects: 100% (363/363), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (249/249), done.\u001b[K\n",
+            "remote: Total 363 (delta 231), reused 210 (delta 103), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (363/363), 214.64 KiB | 2.08 MiB/s, done.\n",
+            "Resolving deltas: 100% (231/231), done.\n"
           ]
         }
       ]
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mKa4Wx9KH2jr",
-        "outputId": "7bc1c0be-b1cf-4823-eb87-fba092ae58ee"
+        "outputId": "04e493aa-e7a3-4347-ce74-b8f39e16af7c"
       },
       "source": [
         "!pwd  # muestra el directorio actual\n",
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xrRc75CPH6Bq",
-        "outputId": "5c0da954-6e63-42c2-a04f-70482df5cc3b"
+        "outputId": "fb293698-b75a-4d46-84ec-4bc81310b759"
       },
       "source": [
         "# Crear directorios para datos y snapshots\n",
@@ -122,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TN1mgM9pPd8E",
-        "outputId": "f9f97d95-4c0d-449d-895f-1a53fd42c490"
+        "outputId": "acf62f14-9aa0-4e87-9081-176ef15bcbf3"
       },
       "source": [
         "# Descargar y descomprimir los datos\n",
@@ -143,25 +143,25 @@
           "name": "stdout",
           "text": [
             "/content/convnet2/data\n",
-            "--2021-11-13 17:13:45--  https://www.dropbox.com/sh/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
+            "--2021-11-13 22:44:04--  https://www.dropbox.com/sh/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
             "Resolving www.dropbox.com (www.dropbox.com)... 162.125.81.18, 2620:100:6035:18::a27d:5512\n",
             "Connecting to www.dropbox.com (www.dropbox.com)|162.125.81.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: /sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa [following]\n",
-            "--2021-11-13 17:13:46--  https://www.dropbox.com/sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
+            "--2021-11-13 22:44:05--  https://www.dropbox.com/sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com/zip_download_get/A9SKWw9ZWqMaqBWSIf6zk80sD9o_F9BzjKo3PDHTIWXd7Rez1jBQARBwLE3fw7e3Q6HFjygKvZmnyf2rfjlhM7aWqXEdCA5by2ckdk7P1Id0HA# [following]\n",
-            "--2021-11-13 17:13:46--  https://uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com/zip_download_get/A9SKWw9ZWqMaqBWSIf6zk80sD9o_F9BzjKo3PDHTIWXd7Rez1jBQARBwLE3fw7e3Q6HFjygKvZmnyf2rfjlhM7aWqXEdCA5by2ckdk7P1Id0HA\n",
-            "Resolving uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com (uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6035:15::a27d:550f\n",
-            "Connecting to uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com (uccf4ef2f75b2018349cbfa64312.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
+            "Location: https://uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com/zip_download_get/A9SsomDx-LCfkKv-qb6NsJO_pRuDilyhMZ6vl3QYSUdbjTUb-jbCggb-t7-qI8Esi0BGMGxrpHH2t9JPiLAtJ4g52xy1590VqH_DvwZmKwo8RA# [following]\n",
+            "--2021-11-13 22:44:05--  https://uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com/zip_download_get/A9SsomDx-LCfkKv-qb6NsJO_pRuDilyhMZ6vl3QYSUdbjTUb-jbCggb-t7-qI8Esi0BGMGxrpHH2t9JPiLAtJ4g52xy1590VqH_DvwZmKwo8RA\n",
+            "Resolving uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com (uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6035:15::a27d:550f\n",
+            "Connecting to uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com (uc7084df4a89d029552678ef821b.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 144143461 (137M) [application/zip]\n",
             "Saving to: ‘data.zip’\n",
             "\n",
-            "data.zip            100%[===================>] 137.47M  12.7MB/s    in 11s     \n",
+            "data.zip            100%[===================>] 137.47M  12.9MB/s    in 11s     \n",
             "\n",
-            "2021-11-13 17:13:58 (12.9 MB/s) - ‘data.zip’ saved [144143461/144143461]\n",
+            "2021-11-13 22:44:17 (12.6 MB/s) - ‘data.zip’ saved [144143461/144143461]\n",
             "\n",
             "warning:  stripped absolute path spec from /\n",
             "mapname:  conversion of  failed\n",
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ociDtGqqJIrZ",
-        "outputId": "f5515fa7-bef0-45f5-cf1e-cbc4e6c55c90"
+        "outputId": "d233d37b-97cd-4729-e3fc-57519ca440a2"
       },
       "source": [
         "# Creamos los tfrecords ~3 minutos\n",
@@ -268,7 +268,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0dxs5MGIJpMo",
-        "outputId": "ef9e52f1-cf46-4dd6-fa5e-4423afb3c966"
+        "outputId": "4d903e2c-354a-4511-ebfa-4c6615387653"
       },
       "source": [
         "!ls /content/convnet2/data"
@@ -313,7 +313,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7hpqfg8FM_mS",
-        "outputId": "39416883-6d4a-4086-b88c-f3386bb44079"
+        "outputId": "6bea195c-b551-4e47-b250-02cf88be7bee"
       },
       "source": [
         "%cd /content/convnet2\n",
@@ -336,7 +336,7 @@
             "From https://github.com/alvaro-neira/convnet2\n",
             " * branch            ssearch_tfr_resnet34 -> FETCH_HEAD\n",
             "Already up to date.\n",
-            "2021-11-13 17:18:20.343188: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2021-11-13 22:48:00.387182: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
             "Model: \"res_net\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
@@ -354,45 +354,45 @@
             "Non-trainable params: 15,232\n",
             "_________________________________________________________________\n",
             "Epoch 1/20\n",
-            "94/94 [==============================] - 56s 390ms/step - loss: 1.8455 - simple_accuracy: 0.4045 - val_loss: 130.8885 - val_simple_accuracy: 0.0834\n",
+            "94/94 [==============================] - 56s 390ms/step - loss: 1.8345 - simple_accuracy: 0.4029 - val_loss: 207.6923 - val_simple_accuracy: 0.0827\n",
             "Epoch 2/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 1.0813 - simple_accuracy: 0.6624 - val_loss: 32.5685 - val_simple_accuracy: 0.0871\n",
+            "94/94 [==============================] - 35s 373ms/step - loss: 1.0616 - simple_accuracy: 0.6700 - val_loss: 20.5259 - val_simple_accuracy: 0.1030\n",
             "Epoch 3/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.7478 - simple_accuracy: 0.7708 - val_loss: 1.8529 - val_simple_accuracy: 0.5006\n",
+            "94/94 [==============================] - 35s 373ms/step - loss: 0.7522 - simple_accuracy: 0.7711 - val_loss: 2.7615 - val_simple_accuracy: 0.3853\n",
             "Epoch 4/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.5119 - simple_accuracy: 0.8457 - val_loss: 1.2618 - val_simple_accuracy: 0.6354\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.5231 - simple_accuracy: 0.8413 - val_loss: 1.9102 - val_simple_accuracy: 0.5076\n",
             "Epoch 5/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.3116 - simple_accuracy: 0.9122 - val_loss: 2.4175 - val_simple_accuracy: 0.4786\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.3331 - simple_accuracy: 0.9064 - val_loss: 1.5850 - val_simple_accuracy: 0.5728\n",
             "Epoch 6/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.1694 - simple_accuracy: 0.9562 - val_loss: 1.9535 - val_simple_accuracy: 0.5913\n",
+            "94/94 [==============================] - 35s 371ms/step - loss: 0.1977 - simple_accuracy: 0.9451 - val_loss: 2.2981 - val_simple_accuracy: 0.5058\n",
             "Epoch 7/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0939 - simple_accuracy: 0.9768 - val_loss: 2.6039 - val_simple_accuracy: 0.5402\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.1307 - simple_accuracy: 0.9649 - val_loss: 3.0048 - val_simple_accuracy: 0.4734\n",
             "Epoch 8/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0757 - simple_accuracy: 0.9809 - val_loss: 1.8010 - val_simple_accuracy: 0.6454\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0932 - simple_accuracy: 0.9760 - val_loss: 2.2180 - val_simple_accuracy: 0.5544\n",
             "Epoch 9/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0551 - simple_accuracy: 0.9868 - val_loss: 2.6654 - val_simple_accuracy: 0.5359\n",
+            "94/94 [==============================] - 35s 371ms/step - loss: 0.0775 - simple_accuracy: 0.9790 - val_loss: 3.0365 - val_simple_accuracy: 0.5248\n",
             "Epoch 10/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0541 - simple_accuracy: 0.9845 - val_loss: 4.8163 - val_simple_accuracy: 0.4093\n",
+            "94/94 [==============================] - 35s 371ms/step - loss: 0.0527 - simple_accuracy: 0.9854 - val_loss: 2.4372 - val_simple_accuracy: 0.5786\n",
             "Epoch 11/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0509 - simple_accuracy: 0.9854 - val_loss: 3.3778 - val_simple_accuracy: 0.4991\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0464 - simple_accuracy: 0.9882 - val_loss: 2.0211 - val_simple_accuracy: 0.6053\n",
             "Epoch 12/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0653 - simple_accuracy: 0.9815 - val_loss: 4.2365 - val_simple_accuracy: 0.4587\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0368 - simple_accuracy: 0.9900 - val_loss: 2.2923 - val_simple_accuracy: 0.6201\n",
             "Epoch 13/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0548 - simple_accuracy: 0.9832 - val_loss: 2.1591 - val_simple_accuracy: 0.6416\n",
+            "94/94 [==============================] - 35s 371ms/step - loss: 0.0232 - simple_accuracy: 0.9942 - val_loss: 1.8045 - val_simple_accuracy: 0.6569\n",
             "Epoch 14/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0402 - simple_accuracy: 0.9886 - val_loss: 2.5648 - val_simple_accuracy: 0.5584\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0085 - simple_accuracy: 0.9986 - val_loss: 1.6395 - val_simple_accuracy: 0.6755\n",
             "Epoch 15/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0311 - simple_accuracy: 0.9917 - val_loss: 3.3765 - val_simple_accuracy: 0.5510\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0030 - simple_accuracy: 0.9998 - val_loss: 1.4199 - val_simple_accuracy: 0.7008\n",
             "Epoch 16/20\n",
-            "94/94 [==============================] - 35s 371ms/step - loss: 0.0284 - simple_accuracy: 0.9919 - val_loss: 1.9710 - val_simple_accuracy: 0.6393\n",
+            "94/94 [==============================] - 35s 373ms/step - loss: 0.0016 - simple_accuracy: 0.9998 - val_loss: 1.1585 - val_simple_accuracy: 0.7419\n",
             "Epoch 17/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0136 - simple_accuracy: 0.9968 - val_loss: 2.4513 - val_simple_accuracy: 0.6340\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 0.0010 - simple_accuracy: 0.9999 - val_loss: 1.1283 - val_simple_accuracy: 0.7459\n",
             "Epoch 18/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0080 - simple_accuracy: 0.9982 - val_loss: 2.8447 - val_simple_accuracy: 0.5720\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 5.7852e-04 - simple_accuracy: 1.0000 - val_loss: 1.1377 - val_simple_accuracy: 0.7446\n",
             "Epoch 19/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 0.0020 - simple_accuracy: 0.9999 - val_loss: 1.2484 - val_simple_accuracy: 0.7404\n",
+            "94/94 [==============================] - 35s 372ms/step - loss: 4.7430e-04 - simple_accuracy: 1.0000 - val_loss: 1.1388 - val_simple_accuracy: 0.7485\n",
             "Epoch 20/20\n",
-            "94/94 [==============================] - 35s 372ms/step - loss: 7.1911e-04 - simple_accuracy: 1.0000 - val_loss: 1.2035 - val_simple_accuracy: 0.7506\n"
+            "94/94 [==============================] - 35s 372ms/step - loss: 4.4642e-04 - simple_accuracy: 1.0000 - val_loss: 1.1458 - val_simple_accuracy: 0.7475\n"
           ]
         }
       ]
@@ -415,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-57pDIqTJ_rJ",
-        "outputId": "35d6bae5-facc-46db-821c-94e7ee2704de"
+        "outputId": "b8516f90-1b07-4769-d32a-67d9529d35b8"
       },
       "source": [
         "from google.colab import drive\n",
@@ -435,16 +435,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jOv-wZvags_-"
+        "id": "jOv-wZvags_-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0cfaf55b-f10b-4ff9-847b-988f9219a220"
       },
       "source": [
-        "!mkdir -p /content/drive/MyDrive/tarea1\n",
-        "!cp /content/convnet2/snapshots/020.h5 /content/drive/MyDrive/tarea1/resnet34.h5\n",
-        "#%cd /content/convnet2/\n",
-        "#!cp /content/drive/MyDrive/2021-2/sección_1/04/snapshots/resnet34_pretrained_011.h5 snapshots"
+        "%cd /content/\n",
+        "!find . -name \\*.dat"
       ],
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n",
+            "./convnet2/data/shape.dat\n",
+            "./convnet2/data/mean.dat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -463,7 +475,7 @@
         "display(Image('/content/convnet2/data/test_images/cow/081_00122082.jpg', width=200, height=200))\n",
         "display(Image('/content/convnet2/data/test_images/sheep/258_00124921.jpg', width=200, height=200))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,7 +540,7 @@
         "!git pull origin resnet34_prediction\n",
         "!python train_simple.py -mode predict -config configs/aneira_tfr.config -name SKETCH # no delay\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +668,7 @@
         "!cp data/mean.dat data/sketch_folder/mean.dat\n",
         "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode compute"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +748,7 @@
         "# Hacemos la búsqueda por similitud \n",
         "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode search"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +822,7 @@
         "display(Image('/content/convnet2/081_00122082.jpg_result.png', width=800, height=800))\n",
         "display(Image('/content/convnet2/026_00119695.jpg_result.png', width=800, height=800))\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
