--- a/fourth.ipynb
+++ b/fourth.ipynb
@@ -25,7 +25,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kK4MO-OKbEfE",
-        "outputId": "63d49ec7-c3b7-4ed2-a3da-768587898e97"
+        "outputId": "6cce769e-b4fa-4801-c934-a6af22298bb0"
       },
       "source": [
         "%cd /content/\n",
@@ -33,7 +33,7 @@
         "# Clonamos el repositorio\n",
         "!git clone https://github.com/alvaro-neira/convnet2.git "
       ],
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -45,7 +45,7 @@
             "remote: Counting objects: 100% (421/421), done.\u001b[K\n",
             "remote: Compressing objects: 100% (288/288), done.\u001b[K\n",
             "remote: Total 421 (delta 271), reused 247 (delta 122), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (421/421), 224.28 KiB | 6.06 MiB/s, done.\n",
+            "Receiving objects: 100% (421/421), 224.28 KiB | 1.95 MiB/s, done.\n",
             "Resolving deltas: 100% (271/271), done.\n"
           ]
         }
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xrRc75CPH6Bq",
-        "outputId": "8d0715f9-7a37-479b-c988-4be5a66876a3"
+        "outputId": "845b2635-ebad-41df-e8ca-fd5c925d17e4"
       },
       "source": [
         "# Crear directorios para datos y snapshots\n",
@@ -77,7 +77,7 @@
         "\n",
         "!ls convnet2"
       ],
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TN1mgM9pPd8E",
-        "outputId": "62e79ba8-7202-4d7b-aaf5-ec3b58aedcca"
+        "outputId": "a9423d9c-6fdf-4aa8-f3e4-7e8e3f3bcf7d"
       },
       "source": [
         "# Descargar y descomprimir los datos\n",
@@ -112,32 +112,32 @@
         "!rm test_images.zip\n",
         "!ls"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/convnet2/data\n",
-            "--2021-11-14 05:59:36--  https://www.dropbox.com/sh/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.5.18, 2620:100:601d:18::a27d:512\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.5.18|:443... connected.\n",
+            "--2021-11-14 06:18:05--  https://www.dropbox.com/sh/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.81.18, 2620:100:6035:18::a27d:5512\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.81.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: /sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa [following]\n",
-            "--2021-11-14 05:59:37--  https://www.dropbox.com/sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
+            "--2021-11-14 06:18:05--  https://www.dropbox.com/sh/raw/hsqjv0kd13xda3g/AABYkVk0ruG85s4aL4C1nDKaa\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com/zip_download_get/A9Wb9lv7PXVT2cv87LUlL6o9VVytw3Sprg1X-Fm8qE0rOJ3T0grUkxDd0rdbUSSJpyOqvemMGa9Eoexh-pmT4m140LkUZjTgucKEo3ufOUBanw# [following]\n",
-            "--2021-11-14 05:59:37--  https://uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com/zip_download_get/A9Wb9lv7PXVT2cv87LUlL6o9VVytw3Sprg1X-Fm8qE0rOJ3T0grUkxDd0rdbUSSJpyOqvemMGa9Eoexh-pmT4m140LkUZjTgucKEo3ufOUBanw\n",
-            "Resolving uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com (uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com)... 162.125.5.15, 2620:100:601d:15::a27d:50f\n",
-            "Connecting to uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com (uc030f43a7f27ec026b2d4bfd775.dl.dropboxusercontent.com)|162.125.5.15|:443... connected.\n",
+            "Location: https://uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com/zip_download_get/A9WSwMKRM61p2-y3k_qETePWjaVkKdKz42BB14UaU9wsvIC41eY1_yXhWbljpbu3gkhCG6DghzJOjDaUHu22YYE1Nd5wDJjcnLKEBmdktzD2NQ# [following]\n",
+            "--2021-11-14 06:18:06--  https://uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com/zip_download_get/A9WSwMKRM61p2-y3k_qETePWjaVkKdKz42BB14UaU9wsvIC41eY1_yXhWbljpbu3gkhCG6DghzJOjDaUHu22YYE1Nd5wDJjcnLKEBmdktzD2NQ\n",
+            "Resolving uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com (uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com)... 162.125.81.15, 2620:100:6035:15::a27d:550f\n",
+            "Connecting to uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com (uc3832b87403b09d27ab7e1ed4d4.dl.dropboxusercontent.com)|162.125.81.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 144143461 (137M) [application/zip]\n",
             "Saving to: ‘data.zip’\n",
             "\n",
-            "data.zip            100%[===================>] 137.47M  48.6MB/s    in 2.8s    \n",
+            "data.zip            100%[===================>] 137.47M  9.12MB/s    in 13s     \n",
             "\n",
-            "2021-11-14 05:59:41 (48.6 MB/s) - ‘data.zip’ saved [144143461/144143461]\n",
+            "2021-11-14 06:18:19 (10.6 MB/s) - ‘data.zip’ saved [144143461/144143461]\n",
             "\n",
             "warning:  stripped absolute path spec from /\n",
             "mapname:  conversion of  failed\n",
@@ -164,19 +164,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-57pDIqTJ_rJ",
-        "outputId": "085e6181-5c5c-49d5-d335-c5b844b6e43a"
+        "outputId": "f24fd4dd-eb3a-476a-e8de-ba091d59c73f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -189,7 +189,7 @@
           "height": 817
         },
         "id": "7q3hWFniEbZo",
-        "outputId": "7853949a-46c2-4c0d-9399-7091862ea84e"
+        "outputId": "68bb3805-da5a-4c1a-e331-f1328d0a3af5"
       },
       "source": [
         "from IPython.display import Image, display\n",
@@ -203,7 +203,7 @@
         "display(Image('/content/convnet2/data/test_images/elephant/103_00125872.jpg', width=100, height=100))\n",
         "display(Image('/content/convnet2/data/test_images/giraffe/129_00126181.jpg', width=100, height=100))"
       ],
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,7 +335,7 @@
       "source": [
         "!mkdir -p /content/convnet2/data/sketch_folder\n"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mq_E1QyaBwfw",
-        "outputId": "073613f5-5010-4c39-b5d2-8c28499ee804"
+        "outputId": "774378ca-3ac0-43ae-f70a-6fad6dad7ed8"
       },
       "source": [
         "%cd /content/convnet2\n",
@@ -356,7 +356,7 @@
         "!cp /content/drive/MyDrive/tarea1/mean.dat /content/convnet2/data/sketch_folder/mean.dat\n",
         "!python train_simple.py -mode predict -config configs/aneira_tfr.config -name SKETCH # no delay\n"
       ],
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +369,7 @@
             "From https://github.com/alvaro-neira/convnet2\n",
             " * branch            resnet34_prediction -> FETCH_HEAD\n",
             "Already up to date.\n",
-            "2021-11-14 06:01:03.809615: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2021-11-14 06:19:31.678621: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
             "Model: \"res_net\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
@@ -410,7 +410,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bf90G-Uh0pux",
-        "outputId": "6283feba-fbba-41eb-8725-eeefe37f14a2"
+        "outputId": "a857df50-8800-4cd9-c2b7-d26704b8b454"
       },
       "source": [
         "%cd /content/convnet2/data/sketch_folder\n",
@@ -418,7 +418,7 @@
         "# Crear directorio para la búsqueda por similitud\n",
         "!mkdir -p ssearch\n"
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "52o5vwdUYH0k",
-        "outputId": "e5f86ffd-c3a7-49a8-a80d-ed07d59676a3"
+        "outputId": "903da3cf-b480-4496-e32c-1f3f7c1040b2"
       },
       "source": [
         "# Calculamos los feature vectors <1 minuto\n",
@@ -449,7 +449,7 @@
         "!cp /content/drive/MyDrive/tarea1/catalog.txt /content/convnet2/data/sketch_folder/ssearch/catalog.txt\n",
         "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode compute"
       ],
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,12 +457,12 @@
           "text": [
             "/content/convnet2\n",
             "Fetching origin\n",
-            "Already on 'ssearch'\n",
-            "Your branch is up to date with 'origin/ssearch'.\n",
+            "Branch 'ssearch' set up to track remote branch 'ssearch' from 'origin'.\n",
+            "Switched to a new branch 'ssearch'\n",
             "From https://github.com/alvaro-neira/convnet2\n",
             " * branch            ssearch    -> FETCH_HEAD\n",
             "Already up to date.\n",
-            "2021-11-14 06:05:24.590428: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2021-11-14 06:20:43.466615: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
             "Model: \"res_net\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
@@ -519,7 +519,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce095112-d535-42de-a79c-d04b4a33ea2b"
+        "outputId": "9fbbf48c-4400-4d32-a161-f01ffce98045"
       },
       "source": [
         "# Búsqueda por similitud antigua\n",
@@ -529,7 +529,7 @@
         "!git pull origin ssearch\n",
         "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode search"
       ],
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +542,7 @@
             "From https://github.com/alvaro-neira/convnet2\n",
             " * branch            ssearch    -> FETCH_HEAD\n",
             "Already up to date.\n",
-            "2021-11-14 06:06:20.342706: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2021-11-14 06:21:36.456209: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
             "Model: \"res_net\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
@@ -669,7 +669,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d82af44-b4f7-47bb-f553-b180d37775eb"
+        "outputId": "011e9190-27c3-4adc-9cd6-6c7342cb06c7"
       },
       "source": [
         "%cd /content/convnet2\n",
@@ -678,7 +678,7 @@
         "!git pull origin metrics\n",
         "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode tarea1"
       ],
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +691,7 @@
             "From https://github.com/alvaro-neira/convnet2\n",
             " * branch            metrics    -> FETCH_HEAD\n",
             "Already up to date.\n",
-            "2021-11-14 06:08:21.844753: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "2021-11-14 06:23:31.072095: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
             "Model: \"res_net\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
