--- a/euclidian.ipynb
+++ b/euclidian.ipynb
@@ -3400,6 +3400,112 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iSMKongxvdhU",
+        "outputId": "b4303034-06b2-4b76-98ff-ed8ad4fe9494"
+      },
+      "source": [
+        "%cd /content/convnet2\n",
+        "!git fetch --all\n",
+        "!git checkout euclidian5\n",
+        "!git pull origin euclidian5\n",
+        "!python ssearch.py -config configs/aneira_tfr.config -name SKETCH -mode chart"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/convnet2\n",
+            "Fetching origin\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 3 (delta 2), reused 3 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (3/3), done.\n",
+            "From https://github.com/alvaro-neira/convnet2\n",
+            "   59f1a99..e4ffbd3  euclidian5 -> origin/euclidian5\n",
+            "Already on 'euclidian5'\n",
+            "Your branch is behind 'origin/euclidian5' by 1 commit, and can be fast-forwarded.\n",
+            "  (use \"git pull\" to update your local branch)\n",
+            "From https://github.com/alvaro-neira/convnet2\n",
+            " * branch            euclidian5 -> FETCH_HEAD\n",
+            "Updating 59f1a99..e4ffbd3\n",
+            "Fast-forward\n",
+            " ssearch.py | 7 \u001b[32m++++\u001b[m\u001b[31m---\u001b[m\n",
+            " 1 file changed, 4 insertions(+), 3 deletions(-)\n",
+            "2021-11-14 14:23:56.235664: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:39] Overriding allow_growth setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+            "Model: \"res_net\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " backbone (ResNetBackbone)   multiple                  21298112  \n",
+            "                                                                 \n",
+            " global_average_pooling2d (G  multiple                 0         \n",
+            " lobalAveragePooling2D)                                          \n",
+            "                                                                 \n",
+            " classifier (Dense)          multiple                  0 (unused)\n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 21,298,112\n",
+            "Trainable params: 21,282,880\n",
+            "Non-trainable params: 15,232\n",
+            "_________________________________________________________________\n",
+            "WARNING:tensorflow:Skipping loading of weights for layer #2 (named classifier) due to mismatch in number of weights. Layer expects 0 weight(s). Received 2 saved weight(s)\n",
+            "sim_model was loaded OK\n",
+            "loading catalog ...\n",
+            "loading catalog ok ...\n",
+            "features loaded ok\n",
+            "animal='sheep'\n",
+            "mAP:  sheep 0.5971045741994148\n",
+            "p@1:  sheep 0.8443728547089167\n",
+            "animal='bear'\n",
+            "mAP:  bear 0.36179830570204125\n",
+            "p@1:  bear 0.6608706706709314\n",
+            "animal='bee'\n",
+            "mAP:  bee 0.6879315063024398\n",
+            "p@1:  bee 0.8757912552441917\n",
+            "animal='cat'\n",
+            "mAP:  cat 0.42152728991397354\n",
+            "p@1:  cat 0.7110308095979666\n",
+            "animal='camel'\n",
+            "mAP:  camel 0.6619404974184603\n",
+            "p@1:  camel 0.8280218399401725\n",
+            "animal='cow'\n",
+            "mAP:  cow 0.38295041680912534\n",
+            "p@1:  cow 0.6447255529741835\n",
+            "animal='crab'\n",
+            "mAP:  crab 0.47361404049879835\n",
+            "p@1:  crab 0.7753560292459379\n",
+            "animal='crocodile'\n",
+            "mAP:  crocodile 0.6838102008281642\n",
+            "p@1:  crocodile 0.8318702453639937\n",
+            "animal='duck'\n",
+            "mAP:  duck 0.5600115568495461\n",
+            "p@1:  duck 0.7873194860756336\n",
+            "animal='elephant'\n",
+            "mAP:  elephant 0.3908777208516267\n",
+            "p@1:  elephant 0.6688440946138562\n",
+            "animal='dog'\n",
+            "mAP:  dog 0.20777559471981494\n",
+            "p@1:  dog 0.47383623951173703\n",
+            "animal='giraffe'\n",
+            "mAP:  giraffe 0.8074948259115745\n",
+            "p@1:  giraffe 0.9149314422321785\n",
+            "mAP total:  0.519736377500415\n",
+            "p@1 total:  0.7514142100149749\n",
+            "precision:  [1, 0.6413284521866514, 0.6189012780731932, 0.6014926597386753, 0.5815689886148528, 0.557138776753566, 0.5268680964224007, 0.48733190733479637, 0.4327333736666251, 0.34133948830851246, 0.1119142029232468]\n",
+            "recall:  [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]\n"
+          ]
+        }
+      ]
     }
   ]
 }
